Fix image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="grid">
 
         <div class="card">
-          <img src=""assets/classic-models.png".png" alt="Classic Models">
+          <img src=""assets/classic-models.png" alt="Classic Models">
           <div class="content">
             <h3>Classic Models – Sales & Financial Analysis</h3>
             <p>End-to-end sales and financial analysis using SQL, Excel, and Power BI.</p>
@@ -112,7 +112,7 @@
         </div>
 
         <div class="card">
-          <img src="assets/online-shoppers.pngg" alt="Online Shoppers Classification">
+          <img src="assets/online-shoppers.png" alt="Online Shoppers Classification">
           <div class="content">
             <h3>Classification of Online Shoppers</h3>
             <p>Classification analysis to support prediction of online purchasing behavior.</p>
