--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="grid">
 
         <div class="card">
-          <img src=""assets/classic-models.png" alt="Classic Models">
+          <img src="assets/classic-models.png" alt="Classic Models">
           <div class="content">
             <h3>Classic Models – Sales & Financial Analysis</h3>
             <p>End-to-end sales and financial analysis using SQL, Excel, and Power BI.</p>
