Add certifications section to index.html
Added a new section for certifications with details on SQL Foundations and Excel Professional Certificate.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,23 @@
       <p class="small">Additional exploratory and learning projects.</p>
       <ul id="repoList" class="repo-list"></ul>
     </div>
+  
+  <div class="section">
+  <h2>Certifications</h2>
+
+  <ul class="repo-list">
+    <li class="repo-item">
+      <div class="repo-name">Microsoft — SQL Foundations</div>
+      <div class="small">Core SQL concepts including querying, filtering, joins, and data analysis foundations.</div>
+    </li>
+
+    <li class="repo-item">
+      <div class="repo-name">Microsoft — Microsoft Excel Professional Certificate</div>
+      <div class="small">Advanced Excel skills including data analysis, formulas, pivot tables, and reporting.</div>
+    </li>
+  </ul>
+</div>
+
 
     <div class="footer">
       © <span id="year"></span> Dhiraj Thapa
