Update certification listings in index.html

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 
   <ul class="repo-list">
     <li class="repo-item">
-      <div class="repo-name">Microsoft — SQL Foundations</div>
-      <div class="small">Core SQL concepts including querying, filtering, joins, and data analysis foundations.</div>
+      <div class="repo-name">Microsoft Excel - Excel from Beginner to Advanced</div>
+      <div class="small">Advanced Excel skills including data analysis, formulas, vlookup, pivot tables, and reporting..</div>
     </li>
 
     <li class="repo-item">
-      <div class="repo-name">Microsoft — Microsoft Excel Professional Certificate</div>
-      <div class="small">Advanced Excel skills including data analysis, formulas, pivot tables, and reporting.</div>
+      <div class="repo-name">The Ultimate SQL & Snowflake Data Analysis Bootcamp - 2026</div>
+      <div class="small">SQL data analysis, SQL optimization, and SQL modeling with Snowflake in this complete course for all skill levels.</div>
     </li>
   </ul>
 </div>
