Change 'Repository' links to 'View Project'

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h3>Classic Models – Sales & Financial Analysis</h3>
             <p>End-to-end sales and financial analysis using SQL, Excel, and Power BI.</p>
             <div class="btns">
-              <a class="btn primary" href="https://github.com/dhiraj092/Classic-Models" target="_blank">Repository</a>
+              <a class="btn primary" href="https://github.com/dhiraj092/Classic-Models" target="_blank">View Project</a>
               <span class="btn">SQL</span>
               <span class="btn">Excel</span>
               <span class="btn">Power BI</span>
@@ -94,7 +94,7 @@
             <h3>Stature Leadership – Survey Analytics</h3>
             <p>Survey and people analytics supporting leadership alignment decisions.</p>
             <div class="btns">
-              <a class="btn primary" href="https://github.com/dhiraj092/Stature-Leadership" target="_blank">Repository</a>
+              <a class="btn primary" href="https://github.com/dhiraj092/Stature-Leadership" target="_blank">View Project</a>
               <span class="btn">Power BI</span>
             </div>
           </div>
@@ -106,7 +106,7 @@
             <h3>Association Rule Mining – Grocery Basket Analysis</h3>
             <p>Market basket analysis to identify product purchase patterns and cross-sell opportunities.</p>
             <div class="btns">
-              <a class="btn primary" href="https://github.com/dhiraj092/Association-Rule-Mining-Grocery-Basket-Analysis" target="_blank">Repository</a>
+              <a class="btn primary" href="https://github.com/dhiraj092/Association-Rule-Mining-Grocery-Basket-Analysis" target="_blank">View Project</a>
               <span class="btn">Python</span>
             </div>
           </div>
@@ -118,7 +118,7 @@
             <h3>Classification of Online Shoppers</h3>
             <p>Classification analysis to support prediction of online purchasing behavior.</p>
             <div class="btns">
-              <a class="btn primary" href="https://github.com/dhiraj092/Classification-of-online-shoppers" target="_blank">Repository</a>
+              <a class="btn primary" href="https://github.com/dhiraj092/Classification-of-online-shoppers" target="_blank">View Project</a>
               <span class="btn">Python</span>
             </div>
           </div>
